# Desktop-Automation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  annotations.py  api_client.py  config.py  main.py  mouse_keyboard.py  notepad.py  ocr_grounder.py  screenshot.py
